<resources>
    <string name="app_name">BusCity</string>
    <string name="title_activity_maps">Map</string>
    <string name="txtTitle">Update Data</string>
    <string name="btnUpdate">Update</string>
    <string name="txtInstructionList">Instruction List</string>
    <string name="txtFromInstructionList">From: </string>
    <string name="txtToInstructionList">To: </string>
    <string name="txtTitleFind">Find routes</string>
    <string name="txtOriginPosition">Origin position: </string>
    <string name="txtDestinationPosition">Destination position: </string>
    <string name="hintOrigin">Input origin here</string>
    <string name="hintDestination">Input destination here</string>
    <string name="btnFind">Find</string>
    <string name="btnExit">Exit</string>
    <string name="txtTitleInformation">Bus City\nBuses of Ho Chi Minh City</string>
    <string name="txtVersion">* Version: 1.0</string>
    <string name="txtAuthor">* Author: BusCity Team - PTIT HoChiMinh</string>
    <string name="txtDetail">* Bus City was simulated by author Le Yen Thanh\'s Bus Map application </string>
    <string name="btnCloseInformation">Close</string>
    <string name="txtFromDetailInstruction">From: </string>
    <string name="txtToDetailInstruction">To: </string>
    <string name="txtWalkDetailInstruction">Walk: </string>
    <string name="txtBusDetailInstruction">Bus: </string>
    <string name="txtTitleLanguage">Choose language</string>
    <string name="btnOKLanguage">OK</string>
    <string name="btnCloseLanguage">Close</string>
    <string name="txtTitleSearch">Choose routes</string>
    <string name="txtSearch">Search: </string>
    <string name="txtNumberRoute">Number Route: </string>
    <string name="txtRouteName">Route Name: </string>
    <string name="txtActivityTime">Activity time: </string>
    <string name="txtGoOn">Go on: </string>
    <string name="txtGoBack">Go back: </string>
    <string name="txtLength">Length: </string>
    <string name="txtRunTime">Run time: </string>
    <string name="txtSpacingTime">Spacing time: </string>
</resources>
