<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InformationActivity">

    <TextView
        android:id="@+id/txtTitleInformation"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/txtTitleInformation"
        android:textColor="@color/colorGreen"
        android:textSize="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtVersion"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:text="@string/txtVersion"
            android:textColor="@color/colorGray"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txtAuthor"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:text="@string/txtAuthor"
            android:textColor="@color/colorGray"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txtDetail"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:text="@string/txtDetail"
            android:textColor="@color/colorGray"
            android:textSize="18dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnClose"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/btnCloseInformation"
        android:textColor="@color/colorGreen" />

</LinearLayout>