<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FindActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorGreen">

        <TextView
            android:id="@+id/txtTitleFind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtTitleFind"
            android:textColor="@color/colorBlack"
            android:textSize="32dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtOriginPosition"
            android:textColor="@color/colorGreen"
            android:textSize="24dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/edtOrigin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_find"
            android:hint="@string/hintOrigin"
            android:paddingLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgChangePosition"
            android:src="@drawable/change"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDestinationPosition"
            android:textColor="@color/colorGreen"
            android:textSize="24dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/edtDestination"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_find"
            android:hint="@string/hintDestination"
            android:paddingLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btnFind"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorGreen"
            android:text="@string/btnFind"
            android:textColor="@color/colorWhite"
            android:textSize="32dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_exit"
            android:text="@string/btnExit"
            android:textColor="@color/colorGreen"
            android:textSize="32dp"
            android:textStyle="bold" />

    </LinearLayout>
    
</LinearLayout>