<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    tools:context=".LanguageActivity">

    <TextView
        android:id="@+id/txtTitleLanguage"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/txtTitleLanguage"
        android:textColor="@color/colorBlack"
        android:textSize="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radVietnamese"
                android:text="Tiếng Việt"
                android:layout_marginBottom="20dp"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radEnglish"
                android:text="English"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="right">

        <Button
            android:id="@+id/btnClose"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/btnCloseLanguage" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/btnOKLanguage" />
    </LinearLayout>


</LinearLayout>