<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InstructionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:background="@color/colorGreen">

        <TextView
            android:id="@+id/txtInstructionList"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txtInstructionList"
            android:textColor="@color/colorWhite"
            android:textSize="24dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtFrom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/txtFromInstructionList"
                android:textColor="@color/colorWhite"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:id="@+id/txtOrigin"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/colorWhite"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/txtToInstructionList"
                android:textColor="@color/colorWhite"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:id="@+id/txtDestination"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/colorWhite"
                android:gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lvInstruction">

        </ListView>
    </LinearLayout>
</LinearLayout>